docs/api/qiskit/0.29/qiskit.providers.basicaer.BasicAerProvider.mdx
---
title: BasicAerProvider (v0.29)
description: API reference for qiskit.providers.basicaer.BasicAerProvider in qiskit v0.29
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.basicaer.BasicAerProvider
---

# BasicAerProvider

<Class id="qiskit.providers.basicaer.BasicAerProvider" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/providers/basicaer/basicaerprovider.py" signature="BasicAerProvider" modifiers="class">
  Bases: `qiskit.providers.provider.ProviderV1`

  Provider for Basic Aer backends.

  ## Methods

  <span id="qiskit-providers-basicaer-basicaerprovider-backends" />

  ### backends

  <Function id="qiskit.providers.basicaer.BasicAerProvider.backends" signature="BasicAerProvider.backends(name=None, filters=None, **kwargs)">
    Return a list of backends matching the specified filtering.

    **Parameters**

    *   **name** (*str*) – name of the backend.
    *   **\*\*kwargs** – dict used for filtering.

    **Returns**

    **a list of Backends that match the filtering**

    criteria.

    **Return type**

    list\[[Backend](qiskit.providers.Backend "qiskit.providers.Backend")]
  </Function>

  <span id="qiskit-providers-basicaer-basicaerprovider-get-backend" />

  ### get\_backend

  <Function id="qiskit.providers.basicaer.BasicAerProvider.get_backend" signature="BasicAerProvider.get_backend(name=None, **kwargs)">
    Return a single backend matching the specified filtering.

    **Parameters**

    *   **name** (*str*) – name of the backend.
    *   **\*\*kwargs** – dict used for filtering.

    **Returns**

    a backend matching the filtering.

    **Return type**

    [Backend](qiskit.providers.Backend "qiskit.providers.Backend")

    **Raises**

    [**QiskitBackendNotFoundError**](qiskit.providers.QiskitBackendNotFoundError "qiskit.providers.QiskitBackendNotFoundError") – if no backend could be found or more than one backend matches the filtering criteria.
  </Function>

  ## Attributes

  ### version

  <Attribute id="qiskit.providers.basicaer.BasicAerProvider.version" attributeValue="1" />
</Class>

