docs/api/qiskit/0.46/qiskit.providers.basicaer.BasicAerProvider.mdx
---
title: BasicAerProvider
description: API reference for qiskit.providers.basicaer.BasicAerProvider
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.basicaer.BasicAerProvider
---

# BasicAerProvider

<Class id="qiskit.providers.basicaer.BasicAerProvider" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.46/qiskit/providers/basicaer/basicaerprovider.py" signature="qiskit.providers.basicaer.BasicAerProvider">
  Bases: [`ProviderV1`](qiskit.providers.ProviderV1 "qiskit.providers.provider.ProviderV1")

  Provider for Basic Aer backends.

  <Admonition title="Deprecated since version 0.46.0" type="danger">
    The class `qiskit.providers.basicaer.basicaerprovider.BasicAerProvider` is deprecated as of qiskit 0.46.0. It will be removed in Qiskit 1.0.0. The qiskit.providers.basicaer module has been superseded by qiskit.providers.basic\_provider, and all its classes have been renamed to follow a new naming convention. Use the new qiskit.providers.basic\_provider.BasicProvider class instead.
  </Admonition>

  ## Attributes

  ### version

  <Attribute id="qiskit.providers.basicaer.BasicAerProvider.version" name="version" attributeValue="= 1" />

  ## Methods

  ### backends

  <Function id="qiskit.providers.basicaer.BasicAerProvider.backends" name="backends" signature="backends(name=None, filters=None, **kwargs)">
    Return a list of backends matching the specified filtering.

    **Parameters**

    *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")) – name of the backend.
    *   **\*\*kwargs** – dict used for filtering.

    **Returns**

    **a list of Backends that match the filtering**

    criteria.

    **Return type**

    [list](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.12)")\[[Backend](qiskit.providers.Backend "qiskit.providers.Backend")]
  </Function>

  ### get\_backend

  <Function id="qiskit.providers.basicaer.BasicAerProvider.get_backend" name="get_backend" signature="get_backend(name=None, **kwargs)">
    Return a single backend matching the specified filtering.

    **Parameters**

    *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")) – name of the backend.
    *   **\*\*kwargs** – dict used for filtering.

    **Returns**

    a backend matching the filtering.

    **Return type**

    [Backend](qiskit.providers.Backend "qiskit.providers.Backend")

    **Raises**

    [**QiskitBackendNotFoundError**](providers#qiskit.providers.QiskitBackendNotFoundError "qiskit.providers.QiskitBackendNotFoundError") – if no backend could be found or more than one backend matches the filtering criteria.
  </Function>
</Class>

